--- a/style.css
+++ b/style.css
@@ -6,15 +6,39 @@
     padding: 0;}
 
 .body {
-  max-width: 1020px;
+  width: 100%;
 }
 
 .keyboard{
-  width: 100%;
   background-color: #004140;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.input-area-container {
+  width: 43%;
+}
+
+.keyboard__input-area {
+  background-color: white;
+  max-width: 1020px;
+  width: 100%;
+  height: 100px;
+  max-height: 300px;
+  margin-bottom: 20px;
+  resize: none;
+  border-radius: 10px;
+  font-size: 20px;
+  padding: 10px;
 }
 
 .keyboard__keys {
+  width: 100%;
+  max-width: 1020px;
   text-align: center;
 }
 
