--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 * {margin-block-start: 0;
     margin-block-end: 0;
     margin-inline-start: 0;
@@ -21,19 +23,27 @@
 
 .input-area-container {
   width: 43%;
+  margin-bottom: 20px;
 }
 
 .keyboard__input-area {
   background-color: white;
+  box-sizing: border-box;
   max-width: 1020px;
   width: 100%;
   height: 100px;
   max-height: 300px;
-  margin-bottom: 20px;
+  font-family: 'Roboto', sans-serif;
   resize: none;
   border-radius: 10px;
   font-size: 20px;
   padding: 10px;
+}
+
+.input-area-container__text {
+  margin-top: 5px;
+  color: white;
+  font-family: 'Roboto', sans-serif;
 }
 
 .keyboard__keys {
@@ -42,15 +52,30 @@
   text-align: center;
 }
 
-.keyboard__key {
+.keyboard__button-container {
+  display: inline-block;
   height: 45px;
   width: 4%;
   max-width: 90px;
   margin: 3px;
   border-radius: 4px;
   border: none;
+  /* background-color: rgba(255, 255, 255, 0.2); */
+  color: white;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.keyboard__key {
+  height: 100%;
+  width: 100%;
+  /* max-width: 90px;
+  margin: 3px; */
+  border-radius: 4px;
+  border: none;
   background-color: rgba(255, 255, 255, 0.2);
   color: white;
+  font-family: 'Roboto', sans-serif;
   font-size: 15px;
   cursor: pointer;
 }
@@ -79,5 +104,13 @@
 }
 
 .keyboard__additional-text {
+  margin-top: 5px;
   color: white;
+  font-family: 'Roboto', sans-serif;
+}
+
+.keyboard__develope-text {
+  margin-top: 5px;
+  color: white;
+  font-family: 'Roboto', sans-serif;
 }
